--- a/embeddedInterface.html
+++ b/embeddedInterface.html
@@ -5,6 +5,8 @@
     <script src="https://presales.appiancloud.com/suite/tempo/ui/sail-client/embeddedBootstrap.nocache.js" id="appianEmbedded"></script>
   </head>
   <body>
+	<p>Hello World</p>
+	<div>In Div</div>
 	<appian-report reportUrlStub="37FirA"></appian-report>
   </body>
 </html>
