--- a/embeddedInterface.html
+++ b/embeddedInterface.html
@@ -2,12 +2,12 @@
 <html>
   <head>
     <!-- This script loads the Appian Web components; change it to your Appian server's domain -->
-    <script src="https://presales.appiancloud.com/suite/tempo/ui/sail-client/embeddedBootstrap.nocache.js" id="appianEmbedded"></script>
+    <script src="https://usaademo.appiancloud.com/suite/tempo/ui/sail-client/embeddedBootstrap.nocache.js" id="appianEmbedded"></script>
   </head>
   <body>
 	<p>Hello World</p>
 	<div>In Div</div>
-	<appian-report reportUrlStub="37FirA"></appian-report>
+	<appian-report reportUrlStub="cv1BpQ"></appian-report>
   </body>
 </html>
 
