--- a/embeddedInterface.html
+++ b/embeddedInterface.html
@@ -8,6 +8,10 @@
 	<p>Hello World</p>
 	<div>In Div</div>
 	<appian-report reportUrlStub="cv1BpQ"></appian-report>
+	  <div>
+		  <appian-action processModelUuid="0002e88c-fc67-8000-fb42-7f0000014e7a"></appian-action>
+
+	  </div>
   </body>
 </html>
 
