--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <!-- This script loads the Appian Web components; change it to your Appian server's domain -->
+    <script src="https://usaademo.appiancloud.com/suite/tempo/ui/sail-client/embeddedBootstrap.nocache.js" id="appianEmbedded"></script>
+  </head>
+  <body>
+	<p>Hello World</p>
+	<div>In Div</div>
+	<appian-report reportUrlStub="cv1BpQ"></appian-report>
+	  <div>
+		  <appian-action processModelUuid="0002e88c-fc67-8000-fb42-7f0000014e7a"></appian-action>
 
+	  </div>
+  </body>
+</html>
